# server/handler/item.go
@@ -23,7 +23,7 @@ type ItemRequest struct {
 	Phone         string
 	Category      string
 	Description   string
-	Images        []string
+	Images        []model.Image
 }
 
 type ItemRequestUpdate struct {
@@ -267,22 +267,22 @@ func CreateItem(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	var images []model.Image
-	for _, val := range itemRequest.Images {
-		id, err := primitive.ObjectIDFromHex(val)
-		if err != nil {
-			ilog.Warn(err)
-			utils.WriteMessageResponse(&w, http.StatusBadRequest, "Wrong image id")
-			return
-		}
-		image, err := model.GetImage(&model.Image{ID: id})
-		if err != nil {
-			ilog.Warn(err)
-			utils.WriteMessageResponse(&w, http.StatusBadRequest, "Image doesn't exists")
-			return
-		}
-		images = append(images, *image)
-	}
+	// var images []model.Image
+	// for _, val := range itemRequest.Images {
+	// 	id, err := primitive.ObjectIDFromHex(val)
+	// 	if err != nil {
+	// 		ilog.Warn(err)
+	// 		utils.WriteMessageResponse(&w, http.StatusBadRequest, "Wrong image id")
+	// 		return
+	// 	}
+	// 	image, err := model.GetImage(&model.Image{ID: id})
+	// 	if err != nil {
+	// 		ilog.Warn(err)
+	// 		utils.WriteMessageResponse(&w, http.StatusBadRequest, "Image doesn't exists")
+	// 		return
+	// 	}
+	// 	images = append(images, *image)
+	// }
 
 	item := &model.Item{
 		Name:          itemRequest.Name,
@@ -296,7 +296,7 @@ func CreateItem(w http.ResponseWriter, r *http.Request) {
 		Phone:         itemRequest.Phone,
 		Category:      itemRequest.Category,
 		Description:   itemRequest.Description,
-		Images:        images,
+		Images:        itemRequest.Images,
 		Created:       time.Now(),
 		Popular:       true,
 	}
